clusters/desire/oauth2-proxy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 120
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        # v6.1.1
        image: quay.io/oauth2-proxy/oauth2-proxy@sha256:791aef35b8d1d2a325028b188d5a650605d69985a0dab1233c06079e7321eee0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 4180
        args:
        - --http-address=:4180
        - --provider=google
        - --email-domain=6f.io
        - --client-id=$(CLIENT_ID)
        - --client-secret=$(CLIENT_SECRET)
        - --cookie-secret=$(COOKIE_SECRET)
        - --skip-provider-button=true
        - --whitelist-domain=.6f.io
        - --cookie-domain=.6f.io
        - --set-authorization-header=true
        - --set-xauthrequest=true
        - --reverse-proxy=true
        - --pass-user-headers=true
        - --cookie-samesite=none
        resources:
          requests:
            memory: 16Mi
            cpu: 50m
          limits:
            memory: 32Mi
            cpu: 200m
