clusters/desire/oauth2-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  ports:
  - name: http
    port: 80
    targetPort: 4180
  selector:
    app: oauth2-proxy
