clusters/desire/oauth2-proxy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - sso.6f.io
    secretName: oauth2-proxy-tls
  rules:
  - host: sso.6f.io
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: oauth2-proxy
            port:
              name: http
